--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
   <title>CS2 Grenade Lineups</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" href="images/Nades/smoke.webp">
 </head>
 <body>
   <div class="container">
