Update and rename index.htm to index.html

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
         <button class="side-btn active" data-side="t">
           <i class="fas fa-user-ninja"></i> T-Side
         </button>
+        <button class="side-btn" data-side="both">
+          <i class="fas fa-users"></i> Both
+        </button>
         <button class="side-btn" data-side="ct">
           <i class="fas fa-shield-alt"></i> CT-Side
         </button>
